# bddm_s2

./: .gitignore  CMakeLists.txt  README.md  interfaceBDDM.pro  projet.pro
build-interfaceBDDM-Desktop_Qt_5_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
interface/: CMakeLists.txt  interface.pro  interfaceBDDM.pro
interface/lib/: libvlccore.so.8.0.0
interface/lib/vlc/: libvlc_vdpau.so.0.0.0
interface/src/: Analyser.cpp  Analyser.h  Common.h  FrameValue.cpp  FrameValue.h  VLCHandler.cpp  VLCHandler.h  VLCPlayer.cpp  VLCPlayer.h  abstractsubanalyser.cpp  abstractsubanalyser.h  analyser_color_detection.cpp  analyser_color_detection.h  analyser_hud_detection.cpp  analyser_hud_detection.h  database.cpp  database.h  database.inl  game.cpp  game.h  game.inl  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
interfaceBDDM/: interfaceBDDM.pro
lib/: libvlc.so.5.5.0
src/: Analyser.cpp  Analyser.h  VLCHandler.h  VLCPlayer.cpp  VLCPlayer.h  main.cpp
